# calculator-mcp

./: .mcp.json  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  SETUP.md  config.yaml  llms.txt  pyproject.toml
.claude/commands/: release-plan.md
docs/: oauth-troubleshooting.md  oauth21.drawio  release-plan-v0.1.0.md  release-plan-v0.2.0.md  release-plan-v0.2.1.md  release-plan-v0.2.10.md  release-plan-v0.2.11.md  release-plan-v0.2.12.md  release-plan-v0.2.13.md  release-plan-v0.2.14.md  release-plan-v0.2.15.md  release-plan-v0.2.16.md  release-plan-v0.2.2.md  release-plan-v0.2.3.md  release-plan-v0.2.4.md  release-plan-v0.2.5.md  release-plan-v0.2.6.md  release-plan-v0.2.7.md  release-plan-v0.2.8.md  release-plan-v0.2.9.md  streamable-httpd.md
src/calculator_mcp/: __init__.py  __main__.py  client.py  config.py  config.yaml  main.py  server.py  todo.py
tests/: __init__.py  test_config.py  test_main.py  test_server.py  test_tools.py
tests/integration/: __init__.py  client.py
